# feedback-router

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml  env.example  escalation.yaml  routing_rules.yaml  teams.yaml
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CHANNELS.md  DEPLOYMENT.md  ICP_AND_THEMES.md  ONE_PAGER.md  ROUTING.md  RUNBOOK.md  TEAMS_SETUP_MYOTA.md
scripts/: seed_data.py  setup.sh
src/: __init__.py  main.py
src/agents/: __init__.py  classifier.py  concierge.py  intake.py  responder.py  router.py
src/channels/: __init__.py
src/channels/slack/: __init__.py  blocks.py  bot.py  commands.py  events.py
src/channels/website/: __init__.py  webhook.py
src/classification/: __init__.py  categories.py  contact.py  sentiment.py  themes.py
src/db/: models.py  session.py
src/middleware/: __init__.py  auth.py  error_handler.py  rate_limit.py
src/routing/: __init__.py  assignment.py  engine.py  escalation.py  rules.py
src/schemas/: __init__.py  classification.py  feedback.py  response.py  routing.py
src/tasks/: pipeline.py  worker.py
src/utils/: config.py  logger.py
tests/: conftest.py
tests/fixtures/: all_themes_financial.json  client_career_security.json  lost_visitor_family.json  privacy_healthcare.json  prospect_productivity.json
tests/integration/: test_pipeline.py
tests/unit/: test_agents.py  test_channels.py  test_classification.py  test_routing.py  test_schemas.py
